Initial working version.
TODOS:
-Handle the load creation event.
-Set up the CreatedUtc column to auto-generate.
-Store the original request details in the table.

--- a/Imports/Imports.csproj
+++ b/Imports/Imports.csproj
@@ -21,6 +21,8 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Imports.Events\Imports.Events.csproj" />
+		<ProjectReference Include="..\Loads.Events\Loads.Events.csproj" />
+		<ProjectReference Include="..\SharedKernel.EfCore\SharedKernel.EfCore.csproj" />
 	</ItemGroup>
 
 </Project>
