--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DomainDb": "Server=(localdb)\\mssqllocaldb;Database=DomainDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LoadImportsDb": "Server=(localdb)\\mssqllocaldb;Database=LoadImportsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
